Added --save_path argument to customize save paths on local system without dirtying json with local paths.
The overrides variable in the config now simply specifies an [override_value] directory in the save_path that contains an [override_value].json file which, coincidentally, overrides the values in the run_config.json to limit accumulation of cruft and to better target customized builds.

--- a/src/run_config.json
+++ b/src/run_config.json
@@ -1,9 +1,8 @@
 {
   "ENGINE": "solid",
   "save_dir": ".",
-  "overrides": "C:\\Users\\nethe\\OneDrive\\Sales\\Models\\Customers\\test_config.json",
+  "overrides": "",
   "save_name": "",
-  "override_name": "",
   "config_name": "5x6",
   "show_caps": false,
   "show_pcbs": false,
