--- a/src/run_config.json
+++ b/src/run_config.json
@@ -1,7 +1,7 @@
 {
   "ENGINE": "solid",
   "save_dir": ".",
-  "overrides": "",
+  "overrides": "testing",
   "save_name": "",
   "config_name": "5x6",
   "show_caps": false,
@@ -133,13 +133,13 @@
   "sa_profile_key_height": 12.7,
   "sa_length": 18.5,
   "sa_double_length": 37.5,
-  "plate_thickness": 6.1,
+  "plate_thickness": 4.6,
   "plate_rim": 2.0,
   "clip_thickness": 1.4,
   "clip_undercut": 1.0,
   "undercut_transition": 0.2,
-  "plate_file_name": "derek_hotswap",
-  "plate_offset": -5.0,
+  "plate_file_name": "hotswap_ridged_test",
+  "plate_offset": -6,
   "oled_mount_type": null,
   "oled_center_row": 1.25,
   "oled_translation_offset": [
