BTUs sorta in place

--- a/src/run_config.json
+++ b/src/run_config.json
@@ -21,6 +21,7 @@
   "thumb_style": "TRACKBALL_WILD",
   "default_1U_cluster": true,
   "trackball_in_wall": false,
+  "trackball_btus": false,
   "tbiw_ball_center_row": 0.2,
   "tbiw_translational_offset": [
     0.0,
