--- a/src/run_config.json
+++ b/src/run_config.json
@@ -1,7 +1,7 @@
 {
   "ENGINE": "solid",
   "save_dir": ".",
-  "overrides": "han_wen_liu2",
+  "overrides": "",
   "save_name": "",
   "config_name": "5x6",
   "show_caps": false,
