--- a/src/run_config.json
+++ b/src/run_config.json
@@ -148,7 +148,7 @@
   "clip_thickness": 1.4,
   "clip_undercut": 1.0,
   "undercut_transition": 0.2,
-  "plate_file_name": "hot_swap_wyld",
+  "plate_file_name": "derek_hotswap",
   "plate_offset": -6,
   "oled_mount_type": null,
   "oled_center_row": 1.25,
