--- a/src/run_config.json
+++ b/src/run_config.json
@@ -148,8 +148,8 @@
   "clip_thickness": 1.4,
   "clip_undercut": 1.0,
   "undercut_transition": 0.2,
-  "plate_file_name": "derek_hotswap",
-  "plate_offset": -6,
+  "plate_file_name": null,
+  "plate_offset": 0.2,
   "oled_mount_type": null,
   "oled_center_row": 1.25,
   "oled_translation_offset": [
@@ -263,7 +263,7 @@
   "wire_post_diameter": 2.6,
   "controller_mount_type": "EXTERNAL",
   "external_holder_height": 12.5,
-  "external_holder_width": 28.75,
+  "external_holder_width": 29.75,
   "external_holder_xoffset": -5.0,
   "external_holder_yoffset": -4.5,
   "screw_hole_diameter": 2.5,
