Added logo_file: null to run

--- a/src/run_config.json
+++ b/src/run_config.json
@@ -4,6 +4,7 @@
   "overrides": "",
   "save_name": "",
   "config_name": "5x6",
+  "logo_file": null,
   "show_caps": false,
   "show_pcbs": false,
   "nrows": 6,
