Logo and screw offsets params and always generate left half items, never simply mirror the right.

--- a/src/run_config.json
+++ b/src/run_config.json
@@ -252,6 +252,7 @@
       "oled_clip_z_gap": 0.2
     }
   },
+  "logo_offsets": [-10, -10, -1],
   "web_thickness": 4.0,
   "post_size": 0.1,
   "post_adj": 0,
@@ -333,6 +334,43 @@
       0,
       -6,
       5
+    ]
+  ],
+  "screw_offsets": [
+    [
+      0,
+      0,
+      0
+    ],
+    [
+      0,
+      0,
+      0
+    ],
+   [
+      0,
+      0,
+      0
+    ],
+    [
+      0,
+      0,
+      0
+    ],
+    [
+      0,
+      0,
+      0
+    ],
+    [
+      0,
+      0,
+      0
+    ],
+   [
+      0,
+      0,
+      0
     ]
   ]
 }
