--- a/src/run_config.json
+++ b/src/run_config.json
@@ -149,8 +149,8 @@
   "clip_thickness": 1.4,
   "clip_undercut": 1.0,
   "undercut_transition": 0.2,
-  "plate_file_name": null,
-  "plate_offset": 0.2,
+  "plate_file_name": "hotswap_ridged_test",
+  "plate_offset": -6,
   "oled_mount_type": null,
   "oled_center_row": 1.25,
   "oled_translation_offset": [
