Added 'resin' parameter which short-circuits trackball supports if true.

--- a/src/run_config.json
+++ b/src/run_config.json
@@ -1,12 +1,13 @@
 {
   "ENGINE": "solid",
   "save_dir": ".",
-  "overrides": "",
+  "overrides": "small_fry_4x5",
   "save_name": "",
   "config_name": "5x6",
   "logo_file": null,
   "show_caps": false,
   "show_pcbs": false,
+  "resin": false,
   "nrows": 6,
   "ncols": 6,
   "alpha": 0.26179916666666664,
