--- a/src/run_config.json
+++ b/src/run_config.json
@@ -1,7 +1,7 @@
 {
   "ENGINE": "solid",
   "save_dir": ".",
-  "overrides": "small_fry_4x5",
+  "overrides": "",
   "save_name": "",
   "config_name": "5x6",
   "logo_file": null,
@@ -266,7 +266,7 @@
   "wire_post_diameter": 2.6,
   "controller_mount_type": "EXTERNAL",
   "external_holder_height": 12.5,
-  "external_holder_width": 29.75,
+  "external_holder_width": 30,
   "external_holder_xoffset": -5.0,
   "external_holder_yoffset": -4.5,
   "screw_hole_diameter": 2.5,
