Screw holes, insert holes, and external holder width adjusted.

--- a/src/run_config.json
+++ b/src/run_config.json
@@ -1,7 +1,7 @@
 {
   "ENGINE": "solid",
   "save_dir": ".",
-  "overrides": "",
+  "overrides": "testing",
   "save_name": "",
   "config_name": "5x6",
   "logo_file": null,
@@ -258,9 +258,9 @@
   "post_size": 0.1,
   "post_adj": 0,
   "screws_offset": "INSIDE",
-  "screw_insert_height": 3.8,
-  "screw_insert_bottom_radius": 2.255,
-  "screw_insert_top_radius": 2.0,
+  "screw_insert_height": 3.5,
+  "screw_insert_bottom_radius": 2.05,
+  "screw_insert_top_radius": 1.95,
   "wire_post_height": 7,
   "wire_post_overhang": 3.5,
   "wire_post_diameter": 2.6,
@@ -269,7 +269,7 @@
   "external_holder_width": 30,
   "external_holder_xoffset": -5.0,
   "external_holder_yoffset": -4.5,
-  "screw_hole_diameter": 2.5,
+  "screw_hole_diameter": 3.05,
   "base_thickness": 3.0,
   "base_offset": 3.0,
   "base_rim_thickness": 5.0,
