--- a/src/run_config.json
+++ b/src/run_config.json
@@ -1,7 +1,7 @@
 {
   "ENGINE": "solid",
   "save_dir": ".",
-  "overrides": "",
+  "overrides": "magnets_4x5_default",
   "save_name": "",
   "config_name": "5x6",
   "logo_file": null,
@@ -258,6 +258,7 @@
   "post_size": 0.1,
   "post_adj": 0,
   "screws_offset": "INSIDE",
+  "magnet_bottom": false,
   "screw_insert_height": 3.5,
   "screw_insert_bottom_radius": 2.05,
   "screw_insert_top_radius": 1.95,
