--- a/src/run_config.json
+++ b/src/run_config.json
@@ -1,7 +1,7 @@
 {
   "ENGINE": "solid",
   "save_dir": ".",
-  "overrides": "dford",
+  "overrides": "",
   "save_name": "",
   "config_name": "5x6",
   "logo_file": null,
