Updated bulk build

--- a/src/run_config.json
+++ b/src/run_config.json
@@ -1,7 +1,7 @@
 {
   "ENGINE": "solid",
   "save_dir": ".",
-  "overrides": "",
+  "overrides": "C:\\\\Users\\\\nethe\\\\OneDrive\\\\Sales\\\\Models\\\\bulk\\bulk_config",
   "save_name": "",
   "config_name": "5x6",
   "logo_file": null,
@@ -14,7 +14,7 @@
   "beta": 0.08726638888888888,
   "centercol": 3,
   "centerrow_offset": 3,
-  "tenting_angle": 0.24479916666666664,
+  "tenting_angle": 0.24479916666666665,
   "symmetry": "symmetric",
   "column_style_gt5": "orthographic",
   "column_style": "standard",
@@ -22,6 +22,7 @@
   "all_last_rows": false,
   "keyboard_z_offset": 12,
   "thumb_style": "TRACKBALL_WILD",
+  "right_side_only": false,
   "default_1U_cluster": true,
   "trackball_in_wall": false,
   "tbiw_ball_center_row": 0.2,
@@ -256,7 +257,11 @@
       "oled_clip_z_gap": 0.2
     }
   },
-  "logo_offsets": [-10, -10, -1],
+  "logo_offsets": [
+    -10,
+    -10,
+    -1
+  ],
   "web_thickness": 4.0,
   "post_size": 0.1,
   "post_adj": 0,
@@ -353,11 +358,6 @@
       -4,
       0
     ],
-   [
-      0,
-      0,
-      0
-    ],
     [
       0,
       0,
@@ -373,7 +373,12 @@
       0,
       0
     ],
-   [
+    [
+      0,
+      0,
+      0
+    ],
+    [
       0,
       0,
       0
