--- a/src/run_config.json
+++ b/src/run_config.json
@@ -2,7 +2,7 @@
   "ENGINE": "solid",
   "branch": "",
   "save_dir": ".",
-  "overrides": "C:\\\\Users\\\\nethe\\\\OneDrive\\\\Sales\\\\Models\\\\bulk\\bulk_config",
+  "overrides": "",
   "save_name": "",
   "config_name": "5x6",
   "logo_file": null,
