Fixed the damn magnet depth, dammit and damn.

--- a/src/run_config.json
+++ b/src/run_config.json
@@ -1,7 +1,7 @@
 {
   "ENGINE": "solid",
   "save_dir": ".",
-  "overrides": "C:\\\\Users\\\\nethe\\\\OneDrive\\\\Sales\\\\Models\\\\bulk\\bulk_config",
+  "overrides": "",
   "save_name": "",
   "config_name": "5x6",
   "logo_file": null,
