Missing param fix

--- a/src/run_config.json
+++ b/src/run_config.json
@@ -21,6 +21,7 @@
   "column_style_gt5": "orthographic",
   "column_style": "standard",
   "full_last_rows": false,
+  "all_last_rows": false,
   "keyboard_z_offset": 12,
   "thumb_style": "TRACKBALL_WILD",
   "right_side_only": false,
