First pass at USB-C and TRRS mount points.

--- a/src/run_config.json
+++ b/src/run_config.json
@@ -9,7 +9,6 @@
   "show_caps": false,
   "show_pcbs": false,
   "resin": false,
-  "shift_column": 0,
   "nrows": 6,
   "ncols": 6,
   "alpha": 0.26179916666666664,
@@ -20,9 +19,10 @@
   "symmetry": "symmetric",
   "column_style_gt5": "orthographic",
   "column_style": "standard",
-  "full_last_rows": false,
-  "all_last_rows": false,
+  "shift_column": 0,
   "inner_column": false,
+  "all_last_rows": false,
+  "full_last_rows": false,
   "keyboard_z_offset": 12,
   "thumb_style": "TRACKBALL_WILD",
   "right_side_only": false,
@@ -111,8 +111,6 @@
   "wall_base_y_thickness": 4.5,
   "wall_base_x_thickness": 4.5,
   "wall_base_back_thickness": 4.5,
-  "usb_c_width": 9.5,
-  "usb_c_height": 3.5,
   "fixed_angles": [
     0.17453277777777776,
     0.17453277777777776,
@@ -189,12 +187,22 @@
   "wire_post_overhang": 3.5,
   "wire_post_diameter": 2.6,
   "controller_mount_type": "EXTERNAL",
+  "controller_side": "both",
   "external_holder_height": 12.5,
   "external_holder_width": 29.2,
   "blackpill_holder_width": 32.0,
   "blackpill_holder_xoffset": -6.5,
   "external_holder_xoffset": -5.0,
   "external_holder_yoffset": -4.5,
+  "usb_c_width": 9.5,
+  "usb_c_height": 3.5,
+  "usb_c_xoffset": -3,
+  "usb_c_yoffset": 0,
+  "usb_c_zoffset": 5,
+  "trrs_hole": false,
+  "trrs_hole_xoffset": 6,
+  "trrs_hole_yoffset": -1.5,
+  "trrs_hole_zoffset": 3,
   "screw_hole_diameter": 3.3,
   "base_thickness": 3.0,
   "base_offset": 3.0,
