Added encoder in wall bits.

--- a/src/run_config.json
+++ b/src/run_config.json
@@ -199,6 +199,7 @@
   "trrs_hole_xoffset": 6,
   "trrs_hole_yoffset": -1.5,
   "trrs_hole_zoffset": 3,
+  "encoder_in_wall": false,
   "screw_hole_diameter": 3.3,
   "base_thickness": 3.0,
   "base_offset": 3.0,
