--- a/src/run_config.json
+++ b/src/run_config.json
@@ -4,13 +4,13 @@
   "save_dir": ".",
   "overrides": "",
   "save_name": "",
-  "config_name": "5x6",
+  "config_name": "3x5",
   "logo_file": null,
   "show_caps": false,
   "show_pcbs": false,
   "resin": false,
-  "nrows": 6,
-  "ncols": 6,
+  "nrows": 3,
+  "ncols": 5,
   "alpha": 0.26179916666666664,
   "beta": 0.08726638888888888,
   "centercol": 3,
@@ -21,7 +21,7 @@
   "column_style": "standard",
   "shift_column": 0,
   "inner_column": false,
-  "all_last_rows": false,
+  "all_last_rows": true,
   "full_last_rows": false,
   "keyboard_z_offset": 12,
   "thumb_style": "TRACKBALL_WILD",
